# smart-signal

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
data/: sample_headlines.csv
src/smartsignal/: __init__.py  cli.py  config.py  data.py  evaluation.py  features.py  modeling.py  pipeline.py  sentiment.py
tests/: test_app.py  test_data.py  test_features.py  test_pipeline.py  test_sentiment.py
